# generative_defects_backend

./: .dockerignore  .env  .env.sample  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
config/: env.py  settings.py  storage_backends.py  urls.py  utils.py
config/settings/: base.py  dev.py  prod.py
defect_generator/api/: apps.py  mixins.py  urls.py  utils.py
defect_generator/authentication/: apis.py  apps.py  serializers.py  services.py  urls.py
defect_generator/common/: apps.py  models.py  services.py
defect_generator/defects/: admin.py  apps.py  exceptions.py  filters.py  models.py  tasks.py  urls.py  utils.py
defect_generator/defects/apis/: defect_model.py  defect_type.py  fine_tune.py  generate.py  image.py  inference.py  inference_images.py  result.py  result_image.py  weight.py
defect_generator/defects/migrations/: 0001_initial.py  0002_alter_defectmodel_file_alter_image_file.py  0003_inference_maskimage_inferenceimages_and_more.py  0004_inferenceimages_created.py  0005_rename_inferenceimages_inferenceimage.py  0006_defectmodel_name.py  0007_result_resultimage_remove_inferenceimage_inference_and_more.py  0008_remove_resultimage_created_result_created.py  0009_image_tuned.py  0010_alter_image_tuned.py  0011_image_model.py  0012_remove_result_mask_image_image_mask_file_and_more.py  0013_alter_result_image.py  0014_defecttype_command.py  0015_defecttype_model.py  0016_remove_defecttype_model_defecttype_defect_model.py  0017_result_used.py  0018_result_status_result_user.py  0019_remove_result_used.py  0020_alter_result_options_result_generated_at_and_more.py  0021_result_mask.py  0022_result_mask_mode_result_number_of_images.py  0023_alter_result_status.py  0024_result_error.py  0027_result_weight.py  (+8 more)
defect_generator/integrations/: apps.py
defect_generator/tasks/: apps.py  celery.py
defect_generator/users/: apis.py  apps.py  filters.py  models.py  services.py  urls.py
defect_generator/workers/: apps.py  models.py  urls.py
(+35 files in other folders)
