[tool.poetry]
name = "rutilea-generative-defects-backend"
version = "0.1.0"
description = ""
authors = ["Mahdi Ghiasi <mahdiw.ghiasi@gmail.com>"]
readme = "README.md"
# packages = [{include = "generative_defects"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"
django-filter = "^23.1"
django-cors-headers = "^3.14.0"
django-extensions = "^3.2.1"
drf-spectacular = "^0.26.1"
django-environ = "^0.10.0"
celery = "^5.2.7"
redis = "^4.5.4"
django-storages = "^1.13.2"
boto3 = "^1.26.112"
requests = "^2.29.0"
pillow = "^9.5.0"
gunicorn = "^20.1.0"
psycopg = "^3.1.9"
whitenoise = "^6.5.0"
djangorestframework-simplejwt = "^5.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipython = "^8.12.0"
django-debug-toolbar = "^4.0.0"


# [tool.poetry.group.core.dependencies]
# torch = "1.13.1"
# xformers = "0.0.16"
# jinja2 = "^3.1.2"
# tensorboard = "^2.12.2"
# ftfy = "^6.1.1"
# transformers = ">=4.25.1"
# torchvision = "<=0.15.1"
# accelerate = ">=0.16.0"
# gradio = "^3.28.1"
# diffusers = "^0.16.1"
# argparse = "^1.4.0"
ptpython = "^3.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
